--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
     "gulp-install": "^1.1.0",
-    "gulp-less": "^3.5.0",
-    "gulp-plumber": "1.2.x",
-    "gulp-postcss": "7.0.x",
     "gulp-posthtml": "^3.0.4",
     "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
@@ -50,6 +47,9 @@
   "dependencies": {
     "gulp-bem-css": "^1.1.3",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-less": "^4.0.1",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.2.3",
     "svgstore": "^2.0.3"
   }
